# libsbc-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md
examples/: alsa.rs  decode.rs
libsbc-sys/: Cargo.toml  build.rs  genbindings.sh
libsbc-sys/src/: bindings.rs  lib.rs
src/: error.rs  lib.rs
