[package]
name = "libsbc"
version = "0.1.0"
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvertescher/libsbc-rs"
homepage = "https://github.com/mvertescher/libsbc-rs"
description = """
Bindings to the Linux Bluetooth low-complexity, subband codec (SBC) library.
"""
categories = ["api-bindings"]

[dependencies]
failure = "0.1.2"
libsbc-sys = { version = "0.1", path = "./libsbc-sys" }
slice-deque = "0.1.13"

[dev-dependencies]
alsa = "0.2.0"
byteorder = "1"
