[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["api-bindings"]
description = "Bindings to the Linux Bluetooth low-complexity, subband codec (SBC) library."
edition = "2018"
homepage = "https://github.com/mvertescher/libsbc-rs"
license = "MIT OR Apache-2.0"
name = "libsbc"
repository = "https://github.com/mvertescher/libsbc-rs"
version = "0.1.4"

[dependencies]
failure = "0.1.2"
libsbc-sys = { version = "0.1.2", path = "./libsbc-sys" }
slice-deque = "0.2"

[dev-dependencies]
alsa = "0.2.0"
byteorder = "1"
