[package]
name = "libsbc-sys"
version = "0.1.0"
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvertescher/libsbc-rs"
homepage = "https://github.com/mvertescher/libsbc-rs"
description = """
Raw bindings to libsbc
"""
build = "build.rs"
categories = ["external-ffi-bindings"]

[features]
# By default, build libsbc from source
default = ["source-build"]
source-build = []

[dependencies]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
