[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "Raw bindings to libsbc"
homepage = "https://github.com/mvertescher/libsbc-rs"
license = "MIT OR Apache-2.0"
name = "libsbc-sys"
repository = "https://github.com/mvertescher/libsbc-rs"
version = "0.1.1"

[features]
# By default, build libsbc from source
default = ["source-build"]
source-build = []

[dependencies]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
